# sticky-lisp

./: Cargo.toml  README.md
src/: main.rs
