[package]
name = "sticky-lisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Argument parser
clap = { version = "3.2", features = ["derive"] }
# S-Exp parser
lexpr = "0.2"
[dependencies.inkwell]
# LLVM api
version = "0.1.0-beta.4"
features = ["llvm13-0"]
